--- a/pom.xml
+++ b/pom.xml
@@ -190,12 +190,22 @@
 							</goal>
 						</goals>
 						<configuration>
+							<filters>
+								<filter>
+									<artifact>*:*</artifact>
+									<excludes>
+										<exclude>META-INF/*.SF</exclude>
+										<exclude>META-INF/*.DSA</exclude>
+										<exclude>META-INF/*.RSA</exclude>
+									</excludes>
+								</filter>
+							</filters>
 							<transformers>
 								<transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
 									<manifestEntries>
-										<Main-Class>
-											com.canalprep.MainApp
-										</Main-Class>
+									<Main-Class>
+										com.canalprep.main.MainApp
+									</Main-Class>
 									</manifestEntries>
 								</transformer>
 							</transformers>
